# photodb

./: .env.example  .gitignore  .justfile  Brewfile  CLAUDE.md  FUTURE.md  Install.md  README.md  biome.jsonc  check_resources.py  increase_pg_connections.sh  pyproject.toml  schema.sql  schema_postgres.sql
docs/: BEDROCK_SETUP.md  DESIGN.md  POSTGRESQL_SETUP.md  WEB_SERVER.md  clustering_alternative.md  event-classification.txt  hdbscan_metal_benchmark.py  hdscan_apple_silicon.md  plan.md  prompt_strategy.md
docs/discarded_plans/: FISHDBC.md
docs/plans/: 2026-02-01-age-gender-body-detection-design.md  2026-02-01-age-gender-implementation.md  2026-02-01-apple-vision-migration.md  (+15 more)
infra/: .env.deploy.example  DEMO.md  Pulumi.prod.yaml  Pulumi.yaml  deploy.sh  docker-compose.prod.yml  index.ts  package.json  pnpm-lock.yaml  tsconfig.json  user-data.sh
migrations/: 001_add_constrained_clustering.sql  001_add_constrained_clustering_rollback.sql  002_add_medoid_tracking.sql  002_add_medoid_tracking_rollback.sql  003_add_cluster_hidden.sql  003_add_cluster_hidden_rollback.sql  004_split_person_name.sql  004_split_person_name_rollback.sql  005_add_person_detection.sql  005_add_person_detection_rollback.sql  006_add_prompt_based_analysis.sql  007_optimize_query_indexes.sql  007_optimize_query_indexes_rollback.sql  008_add_scalability_indexes.sql  008_add_scalability_indexes_rollback.sql  009_add_collections.sql  009_add_collections_rollback.sql  010_add_sessions.sql  010_add_sessions_rollback.sql  010_drop_sessions.sql  010_drop_sessions_rollback.sql  010_hdbscan_clustering.sql  011_add_albums.sql  011_add_albums_rollback.sql  012_add_album_representative.sql  012_add_album_representative_rollback.sql  013_rename_photo_columns.sql  013_rename_photo_columns_rollback.sql  014_add_full_path.sql  014_add_full_path_rollback.sql  015_add_collection_member_person_id.sql  015_add_collection_member_person_id_rollback.sql  016_add_face_path.sql  016_add_face_path_rollback.sql  017_add_admin_flag.sql  017_add_admin_flag_rollback.sql  018_add_person_hidden.sql  018_add_person_hidden_rollback.sql  019_add_genealogy_schema.sql  019_add_genealogy_schema_rollback.sql  (+20 more)
prompts/: analyze_photo.md  schema.json  system_prompt.md  user_prompt_template.md
scripts/: aws_cp_manifests.sh  aws_sum_token_counts.sh  backfill_face_crops.py  backfill_full_size.py  backup.sh  backup_capture.sh  backup_local.sh  benchmark_metal_hdbscan.py  bootstrap.sh  bootstrap_clusters.py  download_models.sh  fix_normalized_dimensions.py  generate_rsync_filelist.py  import_capture_order.py  migrate_png_to_webp.py  migrate_to_hdbscan.py  reset_clustering.py  reset_clustering.sql  reset_prompts.py  reset_scene_analysis.py  reset_unassigned.py  restore.sh  restore_local.sh  seed_person_constraints.py  seed_prompts.py  sync_mm2.sh  test_exif_date.py  update_user_password.py
tests/: conftest.py  test_age_gender_aggregator.py  test_age_gender_stage.py  test_apple_vision_classifier.py  test_arcface_integration.py  test_auto_associate.py  test_batch_coordinator.py  test_changes.py  test_clustering_stage.py  test_database.py  test_detection_stage.py  test_embedding_extractor.py  test_exif.py  test_hdbscan_config.py  test_hdbscan_repository.py  test_image.py  test_insightface_integration.py  test_maintenance_clustering.py  test_mobileclip_analyzer.py  test_person_detector.py  test_prompt_cache.py  test_queue.py  test_scanner.py  test_scene_analysis_stage.py  test_validation.py
web/: CLAUDE.md  Dockerfile  biome.jsonc  package-lock.json  package.json  pnpm-lock.yaml
(+192 files in other folders)
