[project]
name = "photodb"
version = "0.1.0"
description = "Personal photo indexing pipeline"
requires-python = ">=3.13"
dependencies = [
    "pillow>=10.0.0",
    "pillow-heif>=0.13.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "exif>=1.6.0",
    "psycopg2-binary>=2.9.10",
    "anthropic>=0.64.0",
    "instructor>=1.0.0",
    "pydantic>=2.0.0",
    "flask>=3.0.0",
    "boto3>=1.40.21",
    "piexif>=1.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pyright>=1.1.404",
]

[project.scripts]
process-photos = "photodb.cli_process:main"
photodb-web = "photodb.cli_web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"
