[project]
name = "photodb"
version = "0.1.0"
description = "Personal photo indexing pipeline"
requires-python = ">=3.13"
dependencies = [
    "pillow>=10.0.0",
    "pillow-heif>=0.13.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "exif>=1.6.0",
    "psycopg>=3.1.0",
    "psycopg-pool>=3.1.0",
    "pgvector>=0.2.0",
    "anthropic>=0.64.0",
    "instructor>=1.0.0",
    "pydantic>=2.0.0",
    "boto3>=1.40.21",
    "piexif>=1.1.3",
    "facenet-pytorch>=2.5.3",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pyright>=1.1.404",
]

[project.scripts]
process-local = "photodb.cli_local:main"
enrich-photos = "photodb.cli_enrich:main"
photodb-maintenance = "photodb.cli_maintenance:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"
