[project]
name = "photodb"
version = "0.1.0"
description = "Personal photo indexing pipeline"
requires-python = ">=3.13"
dependencies = [
    "pillow>=10.0.0",
    "pillow-heif>=0.13.0",
    "pyvips>=2.2.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "exif>=1.6.0",
    "psycopg>=3.1.0",
    "psycopg-pool>=3.1.0",
    "pgvector>=0.2.0",
    "anthropic>=0.64.0",
    "instructor>=1.0.0",
    "pydantic>=2.0.0",
    "boto3>=1.40.21",
    "piexif>=1.1.3",
    "insightface>=0.7.3",
    "onnxruntime>=1.16.0",
    "numpy>=1.26.0",
    "mivolo",
    "ultralytics==8.1.0",
    "omegaconf>=2.3.0",
    "coremltools>=7.0",
    "pyobjc-framework-Vision>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "open-clip-torch>=2.24.0",
    "hdbscan>=0.8.33",
    "ruff>=0.14.14",
    "pyright>=1.1.408",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pyright>=1.1.404",
]
macos = [
    "coremltools>=7.0",
]
cuda = [
    "onnxruntime-gpu>=1.16.0",
]

[project.scripts]
process-local = "photodb.cli_local:main"
enrich-photos = "photodb.cli_enrich:main"
photodb-maintenance = "photodb.cli_maintenance:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.uv.sources]
mivolo = { git = "https://github.com/WildChlamydia/MiVOLO.git" }

[tool.uv]
override-dependencies = [
    "timm>=0.9.16",  # Override MiVOLO's pin - needed for FastViT (MobileCLIP-S2)
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.11",
]
